--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  firebase_auth: ^3.1.1
+  google_sign_in: ^5.1.0
+  firebase_core:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -58,7 +59,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
