--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,9 @@ dependencies:
   firebase_auth: ^3.1.1
   google_sign_in: ^5.1.0
   firebase_core:
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  firebase_database: ^8.0.0
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^2.5.3
 
 dev_dependencies:
   flutter_test:
